// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`minimal block snapshot 1`] = `
[
  {
    "apiVersion": "v1",
    "data": {
      "block.json": "eNqdk9Fv2jAQxv8V6549pr3macCyFbGJCKfSqrVCJjmIR2Jndw4SqvK/T05oCyNby/Lo7+733X12HgHt1liECKxzNUjIcWOs8cZZiB5hS66pIYK1c9UocxVI2CNxp8L+A0jYGZtDBBPXiXXZkC6PDQwSOCuw0gHlD3WwceufmPlQSq5G8gY5qFZXeFLFnozdQiuBvfYNvw4oNXvltccbzcUlKSzGGZm63wzSAkWhuRBuI3yBIrSLHi2CJY7u7b392BixW5cu2/HIuPeFyXO0YarM2bwL6XQyTaQPg04v5U9+hOwayv5lI8F4rAZXP3eY2dxk2iMLcw4XhgWhzg8XafXAt8T9IoWIUtKWu01SM3RhEjaOKu0hglx7fOdD1bE3IbfG69oqZNbb4UkJNfeP9A+p0341hjCH6EevPi82uMZD238SQkbaOwpYtHuFGaHv4phPvi6mc7VSdyqNv61mn8LhDg8QDUgSuOuECI73CoEdDMPfsdElYyufG8fJbDWP7y6JT8KVvOR2om4nq5uFSi+Zp+L/cZPF8u/cTnyF66k5xap0sRx/iVfJMv48+z6Q67l+HXw8ncZKDUTbn78F1rbtb5jCvG0=",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": {
      "name": "configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
      "namespace": "{{ .Release.Namespace }}",
    },
  },
  {
    "apiVersion": "v1",
    "data": {
      "config.json": "{"config":{"configVersion":"v1","schedule":[{"name":"read","crontab":"* * * * *","allowFailure":true}],"kubernetes":[{"apiVersion":"boom.com/v1","kind":"Boom","executeHookOnEvent":["Added","Modified","Deleted"]}]}}",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": {
      "name": "boom-configmapvolume-block-json-c8b85b34",
      "namespace": "{{ .Release.Namespace }}",
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-operator-serviceaccount-c863141e",
      "namespace": "{{ .Release.Namespace }}",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-operator-clusterrole-c8e55e70",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-operator-clusterrolebinding-c8dd7855",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-operator-clusterrole-c8e55e70",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-operator-serviceaccount-c863141e",
        "namespace": "{{ .Release.Namespace }}",
      },
    ],
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/name": "kblocks-boom-operator",
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "34c0963219bf6b2d085c4ba85eb3c8e191b02b4846b791fd37336b68884346",
        "configmap-hash-kconfig": "2268192aabebb688bcfb05bdd7f0b25907a056f21afdda92209f1c7747cb02",
      },
      "name": "kblocks-boom-operator",
      "namespace": "{{ .Release.Namespace }}",
    },
    "spec": {
      "minReadySeconds": 0,
      "progressDeadlineSeconds": 600,
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-Operator-Deployment-c810923d",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxSurge": "25%",
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-Operator-Deployment-c810923d",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "34c0963219bf6b2d085c4ba85eb3c8e191b02b4846b791fd37336b68884346",
            "configmap-hash-kconfig": "2268192aabebb688bcfb05bdd7f0b25907a056f21afdda92209f1c7747cb02",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_API_KEY",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_API_KEY",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_HOST",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_HOST",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_PORT",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_PORT",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_STORAGE_PREFIX",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_STORAGE_PREFIX",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_ACCESS",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_ACCESS",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-redis.{{ .Release.Namespace }}.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "WORKERS",
                  "value": "1",
                },
              ],
              "image": "dummy/test-operator-image:latest",
              "imagePullPolicy": "Always",
              "name": "operator",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
                },
              ],
            },
            {
              "image": "redis:6.2-alpine",
              "imagePullPolicy": "IfNotPresent",
              "name": "redis",
              "ports": [
                {
                  "containerPort": 6379,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-operator-serviceaccount-c863141e",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
            },
            {
              "configMap": {
                "name": "boom-configmapvolume-block-json-c8b85b34",
              },
              "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "boom-redis",
      "namespace": "{{ .Release.Namespace }}",
    },
    "spec": {
      "externalIPs": [],
      "ports": [
        {
          "port": 6379,
          "targetPort": 6379,
        },
      ],
      "selector": {
        "cdk8s.io/metadata.addr": "boom-Operator-Deployment-c810923d",
      },
      "type": "ClusterIP",
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-worker-workerserviceaccount-c8480528",
      "namespace": "{{ .Release.Namespace }}",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-worker-workerclusterrole-c88cb3c8",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-worker-workerclusterrolebinding-c8dc7047",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-worker-workerclusterrole-c88cb3c8",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-worker-workerserviceaccount-c8480528",
        "namespace": "{{ .Release.Namespace }}",
      },
    ],
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "kblocks-boom-worker",
      "namespace": "{{ .Release.Namespace }}",
    },
    "spec": {
      "externalIPs": [],
      "ports": [
        {
          "port": 3000,
        },
      ],
      "selector": {
        "cdk8s.io/metadata.addr": "boom-Worker-WorkerStatefulSet-c8e7278a",
      },
      "type": "ClusterIP",
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "StatefulSet",
    "metadata": {
      "labels": {
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "34c0963219bf6b2d085c4ba85eb3c8e191b02b4846b791fd37336b68884346",
        "configmap-hash-kconfig": "2268192aabebb688bcfb05bdd7f0b25907a056f21afdda92209f1c7747cb02",
      },
      "name": "kblocks-boom-worker",
      "namespace": "{{ .Release.Namespace }}",
    },
    "spec": {
      "minReadySeconds": 0,
      "podManagementPolicy": "OrderedReady",
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-Worker-WorkerStatefulSet-c8e7278a",
        },
      },
      "serviceName": "kblocks-boom-worker",
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-Worker-WorkerStatefulSet-c8e7278a",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "34c0963219bf6b2d085c4ba85eb3c8e191b02b4846b791fd37336b68884346",
            "configmap-hash-kconfig": "2268192aabebb688bcfb05bdd7f0b25907a056f21afdda92209f1c7747cb02",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_API_KEY",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_API_KEY",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_HOST",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_HOST",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_PORT",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_PORT",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_STORAGE_PREFIX",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_STORAGE_PREFIX",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_ACCESS",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_ACCESS",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-redis.{{ .Release.Namespace }}.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "RELEASE_NAME",
                  "value": "{{ .Release.Name }}",
                },
                {
                  "name": "KBLOCK_OUTPUTS_BOOM-COM-V1-BOOMS",
                  "value": "",
                },
                {
                  "name": "WORKER_INDEX",
                  "valueFrom": {
                    "fieldRef": {
                      "fieldPath": "metadata.labels['apps.kubernetes.io/pod-index']",
                    },
                  },
                },
              ],
              "image": "dummy/test-worker-image:latest",
              "imagePullPolicy": "Always",
              "name": "worker",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "startupProbe": {
                "failureThreshold": 3,
                "tcpSocket": {
                  "port": 3000,
                },
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
                },
              ],
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-worker-workerserviceaccount-c8480528",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
            },
            {
              "configMap": {
                "name": "boom-configmapvolume-block-json-c8b85b34",
              },
              "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
            },
          ],
        },
      },
      "updateStrategy": {
        "rollingUpdate": {
          "partition": 0,
        },
        "type": "RollingUpdate",
      },
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-control-serviceaccount-c867682d",
      "namespace": "{{ .Release.Namespace }}",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-control-clusterrole-c822c923",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-control-clusterrolebinding-c839e5e6",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-control-clusterrole-c822c923",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-control-serviceaccount-c867682d",
        "namespace": "{{ .Release.Namespace }}",
      },
    ],
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/name": "kblocks-boom-control",
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "34c0963219bf6b2d085c4ba85eb3c8e191b02b4846b791fd37336b68884346",
        "configmap-hash-kconfig": "2268192aabebb688bcfb05bdd7f0b25907a056f21afdda92209f1c7747cb02",
      },
      "name": "kblocks-boom-control",
      "namespace": "{{ .Release.Namespace }}",
    },
    "spec": {
      "minReadySeconds": 0,
      "progressDeadlineSeconds": 600,
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-Control-Deployment-c8e74eae",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxSurge": "25%",
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-Control-Deployment-c8e74eae",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "34c0963219bf6b2d085c4ba85eb3c8e191b02b4846b791fd37336b68884346",
            "configmap-hash-kconfig": "2268192aabebb688bcfb05bdd7f0b25907a056f21afdda92209f1c7747cb02",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_API_KEY",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_API_KEY",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_HOST",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_HOST",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_PORT",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_PORT",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_STORAGE_PREFIX",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_STORAGE_PREFIX",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_ACCESS",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_ACCESS",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-redis.{{ .Release.Namespace }}.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "WORKERS",
                  "value": "1",
                },
              ],
              "image": "dummy/test-control-image:latest",
              "imagePullPolicy": "Always",
              "name": "control",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
                },
              ],
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-control-serviceaccount-c867682d",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
            },
            {
              "configMap": {
                "name": "boom-configmapvolume-block-json-c8b85b34",
              },
              "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "batch/v1",
    "kind": "Job",
    "metadata": {
      "annotations": {
        "helm.sh/hook": "pre-delete",
        "helm.sh/hook-weight": "0",
      },
      "labels": {
        "app.kubernetes.io/name": "kblocks-boom-cleanup",
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "34c0963219bf6b2d085c4ba85eb3c8e191b02b4846b791fd37336b68884346",
        "configmap-hash-kconfig": "2268192aabebb688bcfb05bdd7f0b25907a056f21afdda92209f1c7747cb02",
      },
      "name": "kblocks-boom-cleanup",
      "namespace": "{{ .Release.Namespace }}",
    },
    "spec": {
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-Control-Cleanup-c87854d1",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "34c0963219bf6b2d085c4ba85eb3c8e191b02b4846b791fd37336b68884346",
            "configmap-hash-kconfig": "2268192aabebb688bcfb05bdd7f0b25907a056f21afdda92209f1c7747cb02",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_API_KEY",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_API_KEY",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_HOST",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_HOST",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_PORT",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_PORT",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_STORAGE_PREFIX",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_STORAGE_PREFIX",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_ACCESS",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_ACCESS",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-redis.{{ .Release.Namespace }}.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "WORKERS",
                  "value": "1",
                },
                {
                  "name": "CLEANUP",
                  "value": "true",
                },
              ],
              "image": "dummy/test-control-image:latest",
              "imagePullPolicy": "Always",
              "name": "cleanup",
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
                },
              ],
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Never",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-control-serviceaccount-c867682d",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c86b2ad9",
            },
            {
              "configMap": {
                "name": "boom-configmapvolume-block-json-c8b85b34",
              },
              "name": "configmap-boom-configmapvolume-block-json-c8b85b34",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "apiextensions.k8s.io/v1",
    "kind": "CustomResourceDefinition",
    "metadata": {
      "annotations": {
        "kblocks.io/metadata-namespace": "{{ .Release.Namespace }}",
      },
      "name": "booms.boom.com",
    },
    "spec": {
      "group": "boom.com",
      "names": {
        "kind": "Boom",
        "plural": "booms",
      },
      "scope": "Namespaced",
      "versions": [
        {
          "additionalPrinterColumns": [
            {
              "description": "Is resource ready",
              "jsonPath": ".status.conditions[0].status",
              "name": "Ready",
              "type": "string",
            },
            {
              "description": "The status of the resource",
              "jsonPath": ".status.conditions[0].message",
              "name": "Status",
              "type": "string",
            },
          ],
          "name": "v1",
          "schema": {
            "openAPIV3Schema": {
              "properties": {
                "name": {
                  "type": "string",
                },
                "status": {
                  "properties": {
                    "conditions": {
                      "description": "The conditions of the resource.

@ui kblocks.io/hidden",
                      "items": {
                        "description": "Indicates if the resource is ready",
                        "properties": {
                          "lastProbeTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "lastTransitionTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "message": {
                            "type": "string",
                          },
                          "reason": {
                            "type": "string",
                          },
                          "status": {
                            "type": "string",
                          },
                          "type": {
                            "type": "string",
                          },
                        },
                        "required": [
                          "type",
                          "status",
                          "lastTransitionTime",
                        ],
                        "type": "object",
                      },
                      "type": "array",
                    },
                    "lastStateHash": {
                      "description": "The hash of the last object state.

@ui kblocks.io/hidden",
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
              },
              "type": "object",
            },
          },
          "served": true,
          "storage": true,
          "subresources": {
            "status": {},
          },
        },
      ],
    },
  },
]
`;

exports[`multiple blocks 1`] = `
[
  {
    "apiVersion": "v1",
    "data": {
      "block.json": "eNqdk1Fv2jAQx79KdM+GCR7zNMjSFjEgwmm1ap2QcQ7iQezMdphQle8+2YEBI1vL8mb/735398/5FVCuhUQIQSpVAoEMV0IKK5SE8BXWWlUlhLBUquhyVQCBHWrjVdj1gMBGyAxCGCovlttKs+0hwQABw3MsmEPZfenKqOV35NaFalWitgKNUyUr8CzKWC3kGmoCxjJbmbcBW2YstcziAzP5NckNZrgWZTMZpDkGOTN5oFaBzTFw6UGDDlxJ7L7IF/mxEsFmuVV8Y7pCfchFlqF0XXElM2/SeWdMa7ZvrXQKP9bTaFSl+b/KEBAWi9bRLyuMZCY4s2gCcQkPhAk0smx/5VYDfI/dJ8lZlGomjZ8kFW0/jMBK6YJZCCFjFjvWRR1yE62WeFtagcawdXunGplplvQPyWs/KqExg/Bro/4erHWMb3XzEXAeMav0cSVNybhjF/vO6UgA5Y4i12i9UzSO5nHacy34y457F81l/3TZBwLj4edZNKYL+kzTeLIYfXLpG9xD2CKRQyaEcFgOcA26rt0TW7GtwfrEHCSjxTh+viYehRt5yeOQPg4XDzOaXjPPxf/jJrP537lefINrdXWOpelsPriPF8k8vht9afH1Ur8NPoiimNIWa5v798BqvzWRkiuxnrDSL040m96N7ieDxO0O91LByk4PmmAXEk+fnIhy57cqnj71D8e+i/qp9Aa1gbBf178AoSntzw==",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": {
      "name": "configmapvolume-block-json-boom-com-v1-booms-c8339f53",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "v1",
    "data": {
      "block.json": "eNqdk11v2jAUhv9KdK4NU7nM1SBNW8SAiKTVqnZCJjkQD2JntsOEqvz36TgwYGRrWe7s95znfOT1G6BcCYngg1SqBAYZLoUUVigJ/hustKpK8CFTquimqgAGW9TGqbC9AQZrITPw4VY5sdxUmm/2CQYYmDTHghPK7koqoxbfMbUUqlWJ2go0pEpe4EmUsVrIFdQMjOW2Mu8DNtzY2HKLD9zklyQazKRalM1kkOTo5dzknlp6NkeP0r0G7VFJ7L7KV/m5Et56sVHp2nSF+pSLLENJXaVKZm5Jp51xrfmutdIx/FBPo1GVTv9VhoGwWLSOfl5hKDORcovGE+dwTxhPI892F9tqgB9Z91GiFSWaS+MmSUTbD2OwVLrglhzALXYsRe1zI60WeF1agcbwVXunGrlpTPqH5LQfldCYgf/SqL8Hax3jW918DGhH3Cp9sKQpeUrsYtc5Hhmg3MaYarRuU3EYzMLkhlpwlx16F81l73jZAwajwZdpMIrn8XOchOP58JbS17gDv0Vi+0zwYW8OoAapa3piS74xWB+Z/Wg4H4XPl8SDcCUvehzEj4P5wzROLpmn4v9xo+ns71wnvsO1ujrFxsl01r8P59EsvBt+bdnruX4dvB8EYRy3rLa5/wisdq4JlFyK1ZiXzjjBdHI3vB/3I/JO6qSCl50baIIpJJw8kYhy61wVTp56+2OPon4qvUZtwO/V9S/CXe3V",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": {
      "name": "configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "v1",
    "data": {
      "config.json": "{"config":{"configVersion":"v1","schedule":[{"name":"read","crontab":"* * * * *","allowFailure":true}],"kubernetes":[{"apiVersion":"boom.com/v1","kind":"Boom","executeHookOnEvent":["Added","Modified","Deleted"]},{"apiVersion":"doom.com/v1","kind":"Doom","executeHookOnEvent":["Added","Modified","Deleted"]}]}}",
    },
    "immutable": false,
    "kind": "ConfigMap",
    "metadata": {
      "name": "boom-doom-configmapvolume-block-json-c839368f",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-doom-operator-serviceaccount-c8800f81",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-doom-operator-clusterrole-c82fd034",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-doom-operator-clusterrolebinding-c8e87e11",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-doom-operator-clusterrole-c82fd034",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-doom-operator-serviceaccount-c8800f81",
        "namespace": "my-namespace",
      },
    ],
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/name": "kblocks-boom-doom-operator",
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "f27c4c17c6d8bab252325f4af9edb3af8ebe848b54742faf12bfcc8f0429d2",
        "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "5f0e4a22bb04b52631068b034a4d7a6eaf547149fe66644549d9e84f788a9d",
        "configmap-hash-kconfig": "c62f5ec5abfce93189ea13522d69d430372b88ecad137405dee39f2ea47da4",
      },
      "name": "kblocks-boom-doom-operator",
      "namespace": "my-namespace",
    },
    "spec": {
      "minReadySeconds": 0,
      "progressDeadlineSeconds": 600,
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-doom-Operator-Deployment-c81ed77e",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxSurge": "25%",
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-doom-Operator-Deployment-c81ed77e",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "f27c4c17c6d8bab252325f4af9edb3af8ebe848b54742faf12bfcc8f0429d2",
            "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "5f0e4a22bb04b52631068b034a4d7a6eaf547149fe66644549d9e84f788a9d",
            "configmap-hash-kconfig": "c62f5ec5abfce93189ea13522d69d430372b88ecad137405dee39f2ea47da4",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "SECRET1",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET1",
                      "name": "secret-1",
                    },
                  },
                },
                {
                  "name": "SECRET2",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET2",
                      "name": "secret-2",
                    },
                  },
                },
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_API_KEY",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_API_KEY",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_HOST",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_HOST",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_PORT",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_PORT",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_STORAGE_PREFIX",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_STORAGE_PREFIX",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_ACCESS",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_ACCESS",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "CONFIGMAP1",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "CONFIGMAP1",
                      "name": "configmap-1",
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-doom-redis.my-namespace.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ENV1",
                  "value": "env-1",
                },
                {
                  "name": "ENV2",
                  "value": "env-2",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "WORKERS",
                  "value": "2",
                },
              ],
              "image": "dummy/test-operator-image:latest",
              "imagePullPolicy": "Always",
              "name": "operator",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
                },
                {
                  "mountPath": "/kblock-DOOM-COM-V1-DOOMS",
                  "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
                },
              ],
            },
            {
              "image": "redis:6.2-alpine",
              "imagePullPolicy": "IfNotPresent",
              "name": "redis",
              "ports": [
                {
                  "containerPort": 6379,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-doom-operator-serviceaccount-c8800f81",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c8339f53",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
            },
            {
              "configMap": {
                "name": "configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
              },
              "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
            },
            {
              "configMap": {
                "name": "boom-doom-configmapvolume-block-json-c839368f",
              },
              "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "boom-doom-redis",
      "namespace": "my-namespace",
    },
    "spec": {
      "externalIPs": [],
      "ports": [
        {
          "port": 6379,
          "targetPort": 6379,
        },
      ],
      "selector": {
        "cdk8s.io/metadata.addr": "boom-doom-Operator-Deployment-c81ed77e",
      },
      "type": "ClusterIP",
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-doom-worker-workerserviceaccount-c8d18f73",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-doom-worker-workerclusterrole-c80e38e3",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-doom-worker-workerclusterrolebinding-c858e5e5",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-doom-worker-workerclusterrole-c80e38e3",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-doom-worker-workerserviceaccount-c8d18f73",
        "namespace": "my-namespace",
      },
    ],
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "name": "kblocks-boom-doom-worker",
      "namespace": "my-namespace",
    },
    "spec": {
      "externalIPs": [],
      "ports": [
        {
          "port": 3000,
        },
      ],
      "selector": {
        "cdk8s.io/metadata.addr": "boom-doom-Worker-WorkerStatefulSet-c8da4c4c",
      },
      "type": "ClusterIP",
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "StatefulSet",
    "metadata": {
      "labels": {
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "f27c4c17c6d8bab252325f4af9edb3af8ebe848b54742faf12bfcc8f0429d2",
        "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "5f0e4a22bb04b52631068b034a4d7a6eaf547149fe66644549d9e84f788a9d",
        "configmap-hash-kconfig": "c62f5ec5abfce93189ea13522d69d430372b88ecad137405dee39f2ea47da4",
      },
      "name": "kblocks-boom-doom-worker",
      "namespace": "my-namespace",
    },
    "spec": {
      "minReadySeconds": 0,
      "podManagementPolicy": "OrderedReady",
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-doom-Worker-WorkerStatefulSet-c8da4c4c",
        },
      },
      "serviceName": "kblocks-boom-doom-worker",
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-doom-Worker-WorkerStatefulSet-c8da4c4c",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "f27c4c17c6d8bab252325f4af9edb3af8ebe848b54742faf12bfcc8f0429d2",
            "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "5f0e4a22bb04b52631068b034a4d7a6eaf547149fe66644549d9e84f788a9d",
            "configmap-hash-kconfig": "c62f5ec5abfce93189ea13522d69d430372b88ecad137405dee39f2ea47da4",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "SECRET1",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET1",
                      "name": "secret-1",
                    },
                  },
                },
                {
                  "name": "SECRET2",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET2",
                      "name": "secret-2",
                    },
                  },
                },
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_API_KEY",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_API_KEY",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_HOST",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_HOST",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_PORT",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_PORT",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_STORAGE_PREFIX",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_STORAGE_PREFIX",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_ACCESS",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_ACCESS",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "CONFIGMAP1",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "CONFIGMAP1",
                      "name": "configmap-1",
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-doom-redis.my-namespace.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ENV1",
                  "value": "env-1",
                },
                {
                  "name": "ENV2",
                  "value": "env-2",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "RELEASE_NAME",
                  "value": "{{ .Release.Name }}",
                },
                {
                  "name": "KBLOCK_OUTPUTS_BOOM-COM-V1-BOOMS",
                  "value": "",
                },
                {
                  "name": "KBLOCK_OUTPUTS_DOOM-COM-V1-DOOMS",
                  "value": "",
                },
                {
                  "name": "WORKER_INDEX",
                  "valueFrom": {
                    "fieldRef": {
                      "fieldPath": "metadata.labels['apps.kubernetes.io/pod-index']",
                    },
                  },
                },
              ],
              "image": "dummy/test-worker-image:latest",
              "imagePullPolicy": "Always",
              "name": "worker",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "startupProbe": {
                "failureThreshold": 3,
                "tcpSocket": {
                  "port": 3000,
                },
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
                },
                {
                  "mountPath": "/kblock-DOOM-COM-V1-DOOMS",
                  "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
                },
              ],
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-doom-worker-workerserviceaccount-c8d18f73",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c8339f53",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
            },
            {
              "configMap": {
                "name": "configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
              },
              "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
            },
            {
              "configMap": {
                "name": "boom-doom-configmapvolume-block-json-c839368f",
              },
              "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
            },
          ],
        },
      },
      "updateStrategy": {
        "rollingUpdate": {
          "partition": 0,
        },
        "type": "RollingUpdate",
      },
    },
  },
  {
    "apiVersion": "v1",
    "automountServiceAccountToken": false,
    "kind": "ServiceAccount",
    "metadata": {
      "name": "boom-doom-control-serviceaccount-c8607aa4",
      "namespace": "my-namespace",
    },
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRole",
    "metadata": {
      "name": "boom-doom-control-clusterrole-c818af1f",
    },
    "rules": [
      {
        "apiGroups": [
          "*",
        ],
        "resourceNames": [],
        "resources": [
          "*",
        ],
        "verbs": [
          "*",
        ],
      },
    ],
  },
  {
    "apiVersion": "rbac.authorization.k8s.io/v1",
    "kind": "ClusterRoleBinding",
    "metadata": {
      "name": "boom-doom-control-clusterrolebinding-c8446c9c",
    },
    "roleRef": {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "ClusterRole",
      "name": "boom-doom-control-clusterrole-c818af1f",
    },
    "subjects": [
      {
        "apiGroup": "",
        "kind": "ServiceAccount",
        "name": "boom-doom-control-serviceaccount-c8607aa4",
        "namespace": "my-namespace",
      },
    ],
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/name": "kblocks-boom-doom-control",
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "f27c4c17c6d8bab252325f4af9edb3af8ebe848b54742faf12bfcc8f0429d2",
        "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "5f0e4a22bb04b52631068b034a4d7a6eaf547149fe66644549d9e84f788a9d",
        "configmap-hash-kconfig": "c62f5ec5abfce93189ea13522d69d430372b88ecad137405dee39f2ea47da4",
      },
      "name": "kblocks-boom-doom-control",
      "namespace": "my-namespace",
    },
    "spec": {
      "minReadySeconds": 0,
      "progressDeadlineSeconds": 600,
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "cdk8s.io/metadata.addr": "boom-doom-Control-Deployment-c87e3b0f",
        },
      },
      "strategy": {
        "rollingUpdate": {
          "maxSurge": "25%",
          "maxUnavailable": "25%",
        },
        "type": "RollingUpdate",
      },
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-doom-Control-Deployment-c87e3b0f",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "f27c4c17c6d8bab252325f4af9edb3af8ebe848b54742faf12bfcc8f0429d2",
            "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "5f0e4a22bb04b52631068b034a4d7a6eaf547149fe66644549d9e84f788a9d",
            "configmap-hash-kconfig": "c62f5ec5abfce93189ea13522d69d430372b88ecad137405dee39f2ea47da4",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "SECRET1",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET1",
                      "name": "secret-1",
                    },
                  },
                },
                {
                  "name": "SECRET2",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET2",
                      "name": "secret-2",
                    },
                  },
                },
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_API_KEY",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_API_KEY",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_HOST",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_HOST",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_PORT",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_PORT",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_STORAGE_PREFIX",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_STORAGE_PREFIX",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_ACCESS",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_ACCESS",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "CONFIGMAP1",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "CONFIGMAP1",
                      "name": "configmap-1",
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-doom-redis.my-namespace.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ENV1",
                  "value": "env-1",
                },
                {
                  "name": "ENV2",
                  "value": "env-2",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "WORKERS",
                  "value": "2",
                },
              ],
              "image": "dummy/test-control-image:latest",
              "imagePullPolicy": "Always",
              "name": "control",
              "ports": [
                {
                  "containerPort": 3000,
                },
              ],
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
                },
                {
                  "mountPath": "/kblock-DOOM-COM-V1-DOOMS",
                  "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
                },
              ],
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Always",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-doom-control-serviceaccount-c8607aa4",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c8339f53",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
            },
            {
              "configMap": {
                "name": "configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
              },
              "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
            },
            {
              "configMap": {
                "name": "boom-doom-configmapvolume-block-json-c839368f",
              },
              "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "batch/v1",
    "kind": "Job",
    "metadata": {
      "annotations": {
        "helm.sh/hook": "pre-delete",
        "helm.sh/hook-weight": "0",
      },
      "labels": {
        "app.kubernetes.io/name": "kblocks-boom-doom-cleanup",
        "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "f27c4c17c6d8bab252325f4af9edb3af8ebe848b54742faf12bfcc8f0429d2",
        "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "5f0e4a22bb04b52631068b034a4d7a6eaf547149fe66644549d9e84f788a9d",
        "configmap-hash-kconfig": "c62f5ec5abfce93189ea13522d69d430372b88ecad137405dee39f2ea47da4",
      },
      "name": "kblocks-boom-doom-cleanup",
      "namespace": "my-namespace",
    },
    "spec": {
      "template": {
        "metadata": {
          "labels": {
            "cdk8s.io/metadata.addr": "boom-doom-Control-Cleanup-c83f6f9e",
            "configmap-hash-kblock-BOOM-COM-V1-BOOMS": "f27c4c17c6d8bab252325f4af9edb3af8ebe848b54742faf12bfcc8f0429d2",
            "configmap-hash-kblock-DOOM-COM-V1-DOOMS": "5f0e4a22bb04b52631068b034a4d7a6eaf547149fe66644549d9e84f788a9d",
            "configmap-hash-kconfig": "c62f5ec5abfce93189ea13522d69d430372b88ecad137405dee39f2ea47da4",
          },
        },
        "spec": {
          "automountServiceAccountToken": true,
          "containers": [
            {
              "env": [
                {
                  "name": "SECRET1",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET1",
                      "name": "secret-1",
                    },
                  },
                },
                {
                  "name": "SECRET2",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "SECRET2",
                      "name": "secret-2",
                    },
                  },
                },
                {
                  "name": "KBLOCKS_SYSTEM_ID",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_SYSTEM_ID",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_API_KEY",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_API_KEY",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_HOST",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_HOST",
                      "name": "kblocks",
                      "optional": false,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_PUBSUB_PORT",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_PUBSUB_PORT",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_STORAGE_PREFIX",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_STORAGE_PREFIX",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "KBLOCKS_ACCESS",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "KBLOCKS_ACCESS",
                      "name": "kblocks",
                      "optional": true,
                    },
                  },
                },
                {
                  "name": "CONFIGMAP1",
                  "valueFrom": {
                    "configMapKeyRef": {
                      "key": "CONFIGMAP1",
                      "name": "configmap-1",
                    },
                  },
                },
                {
                  "name": "REDIS_URL",
                  "value": "redis://boom-doom-redis.my-namespace.svc.cluster.local:6379",
                },
                {
                  "name": "KBLOCKS_WORKER_IMAGE",
                  "value": "dummy/test-worker-image:latest",
                },
                {
                  "name": "KBLOCKS_OPERATOR_IMAGE",
                  "value": "dummy/test-operator-image:latest",
                },
                {
                  "name": "KBLOCKS_CONTROL_IMAGE",
                  "value": "dummy/test-control-image:latest",
                },
                {
                  "name": "ENV1",
                  "value": "env-1",
                },
                {
                  "name": "ENV2",
                  "value": "env-2",
                },
                {
                  "name": "ADDITIONAL_ENV",
                  "value": "additional-env",
                },
                {
                  "name": "WORKERS",
                  "value": "2",
                },
                {
                  "name": "CLEANUP",
                  "value": "true",
                },
              ],
              "image": "dummy/test-control-image:latest",
              "imagePullPolicy": "Always",
              "name": "cleanup",
              "resources": {
                "limits": {
                  "cpu": "1",
                },
                "requests": {
                  "cpu": "1m",
                },
              },
              "securityContext": {
                "allowPrivilegeEscalation": false,
                "privileged": false,
                "readOnlyRootFilesystem": false,
                "runAsNonRoot": false,
              },
              "volumeMounts": [
                {
                  "mountPath": "/kblock-BOOM-COM-V1-BOOMS",
                  "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
                },
                {
                  "mountPath": "/kblock-DOOM-COM-V1-DOOMS",
                  "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
                },
                {
                  "mountPath": "/kconfig",
                  "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
                },
              ],
            },
          ],
          "dnsPolicy": "ClusterFirst",
          "hostNetwork": false,
          "restartPolicy": "Never",
          "securityContext": {
            "fsGroupChangePolicy": "Always",
            "runAsNonRoot": true,
          },
          "serviceAccountName": "boom-doom-control-serviceaccount-c8607aa4",
          "setHostnameAsFQDN": false,
          "terminationGracePeriodSeconds": 30,
          "volumes": [
            {
              "configMap": {
                "name": "configmapvolume-block-json-boom-com-v1-booms-c8339f53",
              },
              "name": "configmap-configmapvolume-block-json-boom-com-v1-booms-c8339f53",
            },
            {
              "configMap": {
                "name": "configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
              },
              "name": "configmap-configmapvolume-block-json-doom-com-v1-dooms-c80bbd8f",
            },
            {
              "configMap": {
                "name": "boom-doom-configmapvolume-block-json-c839368f",
              },
              "name": "configmap-boom-doom-configmapvolume-block-json-c839368f",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "apiextensions.k8s.io/v1",
    "kind": "CustomResourceDefinition",
    "metadata": {
      "annotations": {
        "kblocks.io/metadata-namespace": "my-namespace",
      },
      "name": "booms.boom.com",
    },
    "spec": {
      "group": "boom.com",
      "names": {
        "kind": "Boom",
        "plural": "booms",
      },
      "scope": "Namespaced",
      "versions": [
        {
          "additionalPrinterColumns": [
            {
              "description": "Is resource ready",
              "jsonPath": ".status.conditions[0].status",
              "name": "Ready",
              "type": "string",
            },
            {
              "description": "The status of the resource",
              "jsonPath": ".status.conditions[0].message",
              "name": "Status",
              "type": "string",
            },
          ],
          "name": "v1",
          "schema": {
            "openAPIV3Schema": {
              "properties": {
                "name": {
                  "type": "string",
                },
                "status": {
                  "properties": {
                    "conditions": {
                      "description": "The conditions of the resource.

@ui kblocks.io/hidden",
                      "items": {
                        "description": "Indicates if the resource is ready",
                        "properties": {
                          "lastProbeTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "lastTransitionTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "message": {
                            "type": "string",
                          },
                          "reason": {
                            "type": "string",
                          },
                          "status": {
                            "type": "string",
                          },
                          "type": {
                            "type": "string",
                          },
                        },
                        "required": [
                          "type",
                          "status",
                          "lastTransitionTime",
                        ],
                        "type": "object",
                      },
                      "type": "array",
                    },
                    "lastStateHash": {
                      "description": "The hash of the last object state.

@ui kblocks.io/hidden",
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
              },
              "type": "object",
            },
          },
          "served": true,
          "storage": true,
          "subresources": {
            "status": {},
          },
        },
      ],
    },
  },
  {
    "apiVersion": "apiextensions.k8s.io/v1",
    "kind": "CustomResourceDefinition",
    "metadata": {
      "annotations": {
        "kblocks.io/metadata-namespace": "my-namespace",
      },
      "name": "dooms.doom.com",
    },
    "spec": {
      "group": "doom.com",
      "names": {
        "kind": "Doom",
        "plural": "dooms",
      },
      "scope": "Namespaced",
      "versions": [
        {
          "additionalPrinterColumns": [
            {
              "description": "Is resource ready",
              "jsonPath": ".status.conditions[0].status",
              "name": "Ready",
              "type": "string",
            },
            {
              "description": "The status of the resource",
              "jsonPath": ".status.conditions[0].message",
              "name": "Status",
              "type": "string",
            },
          ],
          "name": "v1",
          "schema": {
            "openAPIV3Schema": {
              "properties": {
                "name": {
                  "type": "string",
                },
                "status": {
                  "properties": {
                    "conditions": {
                      "description": "The conditions of the resource.

@ui kblocks.io/hidden",
                      "items": {
                        "description": "Indicates if the resource is ready",
                        "properties": {
                          "lastProbeTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "lastTransitionTime": {
                            "format": "date-time",
                            "type": "string",
                          },
                          "message": {
                            "type": "string",
                          },
                          "reason": {
                            "type": "string",
                          },
                          "status": {
                            "type": "string",
                          },
                          "type": {
                            "type": "string",
                          },
                        },
                        "required": [
                          "type",
                          "status",
                          "lastTransitionTime",
                        ],
                        "type": "object",
                      },
                      "type": "array",
                    },
                    "lastStateHash": {
                      "description": "The hash of the last object state.

@ui kblocks.io/hidden",
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
              },
              "type": "object",
            },
          },
          "served": true,
          "storage": true,
          "subresources": {
            "status": {},
          },
        },
      ],
    },
  },
]
`;
